--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
-# Basketball Analysis Service - Production Dependencies for ApexSports-LLC.com
-# Essential packages for payment processing and web application
+# Basketball Analysis Service - Full Production Dependencies
+# Optimized for Render Starter Plan with safe version constraints
 
-# Core Web Framework
+# Core Web Framework (Stable versions)
 Flask==3.0.0
 gunicorn==21.2.0
 Werkzeug==3.0.1
 
-# Payment Processing
-stripe==6.5.0
-python-dotenv==1.0.0
-
-# Optional: For full analysis functionality
-# opencv-python-headless>=4.8.0,<5.0.0
-# mediapipe>=0.10.0,<0.11.0
-# numpy>=1.24.0,<2.0.0
+# Computer Vision & AI (Constrained ranges for stability)
+opencv-python-headless>=4.8.0,<5.0.0
 mediapipe>=0.10.0,<0.11.0
 numpy>=1.24.0,<2.0.0
 
@@ -32,6 +26,3 @@ click>=8.1.0
 
 # Environment & Configuration
 python-dotenv>=1.0.0
-
-# Payment Processing
-stripe>=8.0.0
