--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -14,3 +14,8 @@ services:
     value: "production"
   health_check:
     http_path: /health
+domains:
+- domain: www.apexsports-llc.com
+  type: PRIMARY
+  wildcard: false
+  zone: apexsports-llc.com
